k8_test/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-api
  labels:
    app: go-api
spec:
  containers:
    - name: go-api
      image: 19112002/k8s:v14

      resources:
        requests:
          cpu: 100m
          memory: 20Mi
        limits:
          cpu: 500m
          memory: 25Mi
